@@ -280,16 +280,16 @@ stdout_enable = 0
 # location
 log_enable = 1
 
-# Log file location.  The COMPLETE path and filename.  Ex: '/var/log/snmptt.log'
-log_file = /var/log/snmptt.log
+# Log file location.  The COMPLETE path and filename.  Ex: '/var/log/snmptt/snmptt.log'
+log_file = /var/log/snmptt/snmptt.log
 
 # Set to 1 to enable text logging of *SNMPTT system errors*.  Make sure you 
 # specify a log_system_file location
 log_system_enable = 0
 
 # Log file location.  The COMPLETE path and filename.  
-# Ex: '/var/log/snmpttsystem.log'
-log_system_file = /var/log/snmpttsystem.log
+# Ex: '/var/log/snmptt/snmpttsystem.log'
+log_system_file = /var/log/snmptt/snmpttsystem.log
 
 # Set to 1 to enable logging of unknown traps.  This should normally be left off
 # as the file could grow large quickly.  Used primarily for troubleshooting.  If
@@ -301,10 +301,10 @@ log_system_file = /var/log/snmpttsystem.log
 unknown_trap_log_enable = 0
 
 # Unknown trap log file location.  The COMPLETE path and filename.  
-# Ex: '/var/log/snmpttunknown.log'
+# Ex: '/var/log/snmptt/snmpttunknown.log'
 # Leave blank to disable logging to text file if logging to SQL is enabled
 # for unknown traps
-unknown_trap_log_file = /var/log/snmpttunknown.log
+unknown_trap_log_file = /var/log/snmptt/snmpttunknown.log
 
 # How often in seconds statistics should be logged to syslog or the event log.
 # Set to 0 to disable
@@ -599,12 +599,12 @@ DEBUGGING = 0
 # Location of debugging output file.  Leave blank to default to STDOUT (good for
 # standalone mode, or daemon mode without forking)
 DEBUGGING_FILE = 
-# DEBUGGING_FILE = /var/log/snmptt.debug
+# DEBUGGING_FILE = /var/log/snmptt/snmptt.debug
 
 # Debugging file - SNMPTTHANDLER
 # Location of debugging output file.  Leave blank to default to STDOUT
 DEBUGGING_FILE_HANDLER = 
-# DEBUGGING_FILE_HANDLER = /var/log/snmptthandler.debug
+# DEBUGGING_FILE_HANDLER = /var/log/snmptt/snmptthandler.debug
 
 [TrapFiles]
 # A list of snmptt.conf files (this is NOT the snmptrapd.conf file).  The COMPLETE path 
