@@ -1,3 +1,12 @@
+May 17th, 2009: Alex Burger <alex_b@users.sourceforge.net>
+- Added LSB init keywords and actions to snmptt-init.d and changed the
+  priority for start / stop so that it starts after snmptrapd and stops
+  before snmptrapd.  Thanks to Ville Skytta for the patch.
+
+- Changed the default log path to /var/log/snmptt for Unix and c:\snmpt\log
+  for Windows to make it easier to grant write permission to the snmptt
+  process.  Thanks to Ville Skytta for the patch.
+
 January 15th, 2009: Alex Burger <alex_b@users.sourceforge.net>
 - Re-applied patch for bug 1748512.  Somehow it was added wrong and it
   prevented trap lines that contained single line items inside of quotes
